--- a/Project.toml
+++ b/Project.toml
@@ -3,6 +3,8 @@ EcologicalNetworks = "f03a62fe-f8ab-5b77-a061-bb599b765229"
 EcologicalNetworksPlots = "9f7a259d-73a7-556d-a7a2-3eb122d3865b"
 IJulia = "7073ff75-c697-5162-941a-fcdaad2a7d2a"
 Plots = "91a5bcdd-55d7-5caf-9e0b-520d859cae80"
+Random = "9a3f8284-a2c9-5f02-9a11-845980a1fd5c"
+Statistics = "10745b16-79ce-11e8-11f9-7d13ad32a3b2"
 
 [compat]
 julia = "1.2"
