--- a/Project.toml
+++ b/Project.toml
@@ -1,4 +1,5 @@
 [deps]
+Distributions = "31c24e10-a181-5473-b8eb-7969acd0382f"
 EcologicalNetworks = "f03a62fe-f8ab-5b77-a061-bb599b765229"
 EcologicalNetworksPlots = "9f7a259d-73a7-556d-a7a2-3eb122d3865b"
 IJulia = "7073ff75-c697-5162-941a-fcdaad2a7d2a"
