--- a/Project.toml
+++ b/Project.toml
@@ -1,4 +1,5 @@
 [deps]
+DataFrames = "a93c6f00-e57d-5684-b7b6-d8193f3e46c0"
 Distributions = "31c24e10-a181-5473-b8eb-7969acd0382f"
 EcologicalNetworks = "f03a62fe-f8ab-5b77-a061-bb599b765229"
 EcologicalNetworksPlots = "9f7a259d-73a7-556d-a7a2-3eb122d3865b"
